# Play4Reason-ROLL

./: pyproject.toml  test.sh
examples/qwen2.5-1.5B-Instruct/: agent_val_sokoban.yaml
