[project]
name = "roll"             # 项目名称
version = "0.1.0"         # 版本号，可以随便写
description = "ROLL project"

[tool.setuptools.packages.find]
include = ["roll*"]       # 只安装 roll/ 目录为包

[tool.black]
line-length = 119
target-version = ['py310']

[tool.ruff]
ignore = ["E501", "E741", "W605"]
select = ["E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["roll"]
